--- a/assets/css/global/pokemoncolors.css
+++ b/assets/css/global/pokemoncolors.css
@@ -1,89 +1,89 @@
 .normal {
-    background-color: #c89e6b;
-    color: #503a1f;
+    background-color: #a8a878;
+    color: #6d6d4e;
 }
 
 .grass {
-    background-color: #92d1b4;
-    color: #1a4e42;
+    background-color: #78c850;
+    color: #4e8234;
 }
 
 .fire {
-    background-color: #fd7a7a;
-    color: #531818;
+    background-color: #f08030;
+    color: #9c531f;
 }
 
 .water {
-    background-color: #75bdfd;
-    color: #2e485f;
+    background-color: #6890f0;
+    color: #445e9c;
 }
 
 .electric {
-    background-color: #f5e585;
-    color: #524a1c;
+    background-color: #f8d030;
+    color: #a1871f;
 }
 
 .ice {
-    background-color: #98d5d7;
-    color: #20494b;
+    background-color: #98d8d8;
+    color: #638d8d;
 }
 
 .ground {
-    background-color: #e7d060;
-    color: #463d14;
+    background-color: #e0c068;
+    color: #927d44;
 }
 
 .flying {
-    background-color: #a98ff0;
-    color: #261a49;
+    background-color: #a890f0;
+    color: #6d5e9c;
 }
 
 .poison {
-    background-color: #ad7fae;
-    color: #3e103f;
+    background-color: #a040a0;
+    color: #682a68;
 }
 
 .fighting {
-    background-color: #cf423a;
-    color: #3d0c0a;
+    background-color: #c03028;
+    color: #7d1f1a;
 }
 
 .psychic {
-    background-color: #f65687;
-    color: #6d263b;
+    background-color: #f85888;
+    color: #8b3a3b;
 }
 
 .dark {
-    background-color: #382d26;
-    color: #b38f79;
+    background-color: #705848;
+    color: #5a493e;
 }
 
 .rock {
-    background-color: #b5b8a7;
-    color: #474b35;
+    background-color: #b8a038;
+    color: #786824;
 }
 
 .bug {
-    background-color: #99c98b;
-    color: #28461f;
+    background-color: #a8b820;
+    color: #6d7815;
 }
 
 .ghost {
-    background-color: #6e5896;
-    color: #b9a5df;
+    background-color: #705898;
+    color: #493963;
 }
 
 .steel {
-    background-color: #b9b7cf;
-    color: #34264d;
+    background-color: #b8b8d0;
+    color: #787887;
 }
 
 .dragon {
-    background-color: #8b5dff;
-    color: #250163;
+    background-color: #7038f8;
+    color: #4924a1;
 }
 
 .fairy {
-    background-color: #f8cfd5;
-    color: #664147;
+    background-color: #ee99ac;
+    color: #9b6470;
 }
