--- a/assets/css/global/animations.css
+++ b/assets/css/global/animations.css
@@ -1,10 +1,10 @@
 .slideInDown {
-    animation: slideInDown 1s linear;
+    animation: slideInDown 0.8s ease-out; /* Ajuste a duração e a função de temporização conforme necessário */
 }
 
 @keyframes slideInDown {
     0% {
-        transform: translateY(-20%);
+        transform: translateY(-50%);
         visibility: visible;
     }
 
@@ -14,12 +14,12 @@
 }
 
 .slideInLeft {
-    animation: slideInLeft 1s both;
+    animation: slideInLeft 0.8s ease-out both;
 }
 
 @keyframes slideInLeft {
     0% {
-        transform: translateX(-10%);
+        transform: translateX(-30%);
         visibility: visible;
     }
 
@@ -29,24 +29,22 @@
 }
 
 .slideInRight {
-    animation: slideInRight 1s both;
+    animation: slideInRight 0.8s ease-out both;
 }
 
 @keyframes slideInRight {
     0% {
-        -webkit-transform: translateX(10%);
         transform: translateX(10%);
         visibility: visible;
     }
 
     100% {
-        -webkit-transform: translateX(0);
         transform: translateX(0);
     }
 }
 
 .fadeIn {
-    animation: fadeIn 1s both;
+    animation: fadeIn 0.8s ease-out both;
 }
 
 @keyframes fadeIn {
@@ -58,7 +56,7 @@
         opacity: 1;
     }
 }
-/* 
+
 @media (max-width: 410px){
     .fadeIn,
     .slideInRight,
@@ -66,4 +64,4 @@
     .slideInDown {
         animation: none 0s;
     }
-} */
+}
