--- a/assets/css/global/pokemoncolors.css
+++ b/assets/css/global/pokemoncolors.css
@@ -4,7 +4,7 @@
 }
 
 .grass {
-    background-color: #78c850;
+    background-color: #69d831;
     color: #4e8234;
 }
 
@@ -19,12 +19,12 @@
 }
 
 .electric {
-    background-color: #f8d030;
+    background-color: #cac8c1;
     color: #a1871f;
 }
 
 .ice {
-    background-color: #98d8d8;
+    background-color: #69e2e2;
     color: #638d8d;
 }
 
