--- a/assets/css/global/global.css
+++ b/assets/css/global/global.css
@@ -12,7 +12,7 @@
 body {
     font-family: 'Nunito', Arial, Helvetica, sans-serif;
     background-color: #f7f7f7;
-    color: #141414;
+    color: #ffffff;
     overflow-x: hidden !important;
 }
 
