--- a/assets/css/home/pokedex.css
+++ b/assets/css/home/pokedex.css
@@ -19,7 +19,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    background: #fff;
+    background: linear-gradient(90deg, rgba(7, 7, 7, 0.5) 17%, rgba(4, 90, 160, 0.5) 56%);
     overflow: hidden;
     position: relative;
 }
@@ -43,7 +43,7 @@
 }
 
 .pokemon .number {
-    color: #000;
+    color: white;
     opacity: .3;
     text-align: right;
     font-size: 1rem;
@@ -55,7 +55,7 @@
     font-size: 1.5rem;
     font-weight: 700;
     text-transform: capitalize;
-    color: #141414;
+    color:white;
 }
 
 .pokemon .detail .types {
@@ -100,7 +100,7 @@
 }
 
 .pagination button {
-    background-color: #141414;
+    background-color: #286416;
     border: none;
     border-radius: 1rem;
     color: #fff;
